# fjorge

./: CMakeLists.txt  README.md  clobber
docs/: GUIDE.md  HACKING.md  INSTALL.md  LINKS.md  README.md  TODO.md  http-requests-training.tar.bz2
include/: colors.h  fjorge.h
src/: add_header.c  array_length.c  array_portlist.c  array_ports.c  array_portstr.c  auth_basic.c  base64_decode.c  base64_encode.c  basic_auth.c  callback_info.c  callback_message.c  callback_ocsp.c  callback_verify.c  cbprint_cnname.c  cbprint_sanname.c  connect_tcp.c  connect_tls.c  copy_host.c  count_portlist.c  count_ports.c  count_portstr.c  create_serial.c  create_sockbio.c  decode_base64.c  decode_url.c  describe_usage.c  dup_headers.c  encode_base64.c  encode_hex.c  encode_url.c  error_callback.c  error_ssl.c  error_tcp.c  error_tls.c  extract_header.c  fjcb_bio_debug.c  fjprintf_callback.c  fjprintf_debug.c  fjprintf_error.c  fjprintf_verbose.c  (+43 more)
